# openvino

inference-engine/ie_bridges/rust/: Cargo.toml  build.rs
inference-engine/ie_bridges/rust/src/: bridge.h  lib.rs  main.rs
inference-engine/ie_bridges/rust/src/binding/: mod.rs
inference-engine/ie_bridges/rust/src/binding/cpp/: bridge.h  mod.rs
