[package]
name = "openvino"
version = "0.1.0"
authors = ["Andrew Brown <andrew.brown@intel.com>"]
edition = "2018"

[dependencies]
cxx = "0.3"
# FIXME the features below are specific to my installation; see https://github.com/twistedfall/opencv-rust
opencv = {version = "0.43", default-features = false, features = ["opencv-34", "buildtime-bindgen", "clang-runtime"]}

[build-dependencies]
cxx-build = "0.3"
bindgen = "0.54.1"
